--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,15 +2,15 @@ name: Run inatsite
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Her 12 saatte bir (UTC) [00:00, 12:00]
-  workflow_dispatch: {}
+    - cron: '0 */12 * * *'   # Her 12 saatte bir (UTC)
+  workflow_dispatch: {}       # Elle tetikleme
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write
+      contents: write   # commit/push için gerekli
 
     steps:
       - name: Checkout
@@ -26,14 +26,32 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # YENİ EKLENEN ADIM: Python betiğini çalıştırmadan önce satır sonlarını düzeltir.
+      - name: Convert line endings to LF
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dos2unix
+          dos2unix inatsite.py
+
       - name: Run script
         run: |
-          set -e
           python inatsite.py
 
       - name: Commit output if changed
         run: |
-          set -e
+          if [ -f "inat.txt" ]; then
+            if ! git diff --quiet -- inat.txt; then
+              git config user.name "github-actions[bot]"
+              git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+              git add inat.txt
+              git commit -m "Update inat.txt [skip ci]"
+              git push
+            else
+              echo "No changes in inat.txt"
+            fi
+          else
+            echo "inat.txt not found"
+          fi
           if [ -f "inat.txt" ]; then
             if ! git diff --quiet -- inat.txt; then
               git config user.name "github-actions[bot]"
