--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,46 +1,46 @@
-name: Run inatsite
-
-on:
-  schedule:
-    - cron: '0 */12 * * *'   # Her 12 saatte bir (UTC)
-  workflow_dispatch: {}       # Elle tetikleme
-
-jobs:
-  run:
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: write   # commit/push için gerekli
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11' # Belirli bir versiyon kullanmak daha tutarlıdır
-
-      - name: Install dependencies
+      - name: Commit and push if changed (DEBUG)
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Her komutu ve çıktısını detaylı görmek için verbose modunu aç
+          set -x
 
-      - name: Run script
-        run: |
-          python inatsite.py
-
-      - name: Commit and push if changed
-        run: |
-          git pull --rebase
-          if [ -f "inat.txt" ] && ! git diff --quiet inat.txt; then
-            echo "Değişiklik bulundu, commit hazırlanıyor..."
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add .gitattributes inat.txt # .gitattributes'i de ekleyelim
-            git commit -m "Update inat.txt [skip ci]"
-            git push
-            echo "Değişiklikler başarıyla pushlandı."
-          else
-            echo "inat.txt dosyasında değişiklik yok veya dosya bulunamadı."
+          echo "--- Başlangıç Durumu ---"
+          git status
+          git branch -v
+          git remote -v
+          
+          echo "--- Dosya Kontrolü ---"
+          if [ ! -f "inat.txt" ]; then
+            echo "HATA: inat.txt dosyası bulunamadı. Script dosyayı oluşturmamış."
+            exit 1
           fi
+          echo "inat.txt dosyası mevcut."
+
+          # Git'in değişikliği görüp görmediğini kontrol et
+          if ! git status --porcelain | grep -q "inat.txt"; then
+            echo "UYARI: Git'e göre inat.txt dosyasında bir değişiklik yok. Mevcut dosya ile aynı olabilir."
+            echo "--- Dosya içeriği ---"
+            cat inat.txt
+            exit 0
+          fi
+          echo "Git tarafından değişiklikler algılandı."
+
+          echo "--- Git Yapılandırması ---"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          
+          echo "--- Son Değişiklikleri Çekme (pull) ---"
+          git pull --rebase
+
+          echo "--- Dosyayı Ekleme (add) ---"
+          git add inat.txt
+          git status
+          
+          echo "--- Commit Oluşturma ---"
+          git commit -m "Update inat.txt [skip ci]"
+
+          echo "--- Uzak Sunucuya Gönderme (push) ---"
+          # Sorunun yaşandığı kritik komut bu. Çıktısı çok önemli.
+          git push
+
+          echo "--- İşlem Tamamlandı ---"
+          
