--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,3 +1,35 @@
+name: Run inatsite
+
+on:
+  schedule:
+    - cron: '0 */12 * * *'   # Her 12 saatte bir (UTC)
+  workflow_dispatch: {}       # Elle tetikleme
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write   # commit/push için gerekli
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11' # Belirli bir versiyon kullanmak daha tutarlıdır
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run script
+        run: |
+          python inatsite.py
+
       - name: Commit and push if changed (DEBUG)
         run: |
           # Her komutu ve çıktısını detaylı görmek için verbose modunu aç
@@ -43,4 +75,3 @@
           git push
 
           echo "--- İşlem Tamamlandı ---"
-          
